make class for indented

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -1,8 +1,8 @@
 div.indented {
-	margin-left: 3em;
+	margin-left: 3rem;
 }
 div.loweralphalist ol { 
 	list-style-type: lower-alpha;
-	margin-left: 3em;
+	margin-left: 3rem;
 }
 
