put centring as class on on images

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -1,6 +1,9 @@
 div.indented {
 	margin-left: 3rem;
 }
+div.centred {
+	text-align: center;
+}
 div.loweralphalist ol { 
 	list-style-type: lower-alpha;
 	margin-left: 3rem;
