--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -1,5 +1,8 @@
-div.indented {
-	margin-left: 1.5rem;
+@media only screen and (min-device-width: 500px) { 
+	div.indented {
+		margin-left: 2rem;
+		margin-right: 2rem;
+	}
 }
 div.centred {
 	text-align: center;
