fix external links

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -12,3 +12,9 @@ div.loweralphalist ol {
 	margin-left: 1.5rem;
 }
 
+a[rel='noopener noreferrer']::after {
+	content: " 🡕"; /* ⇗ ⋙ ⌲ ⍈  ↪ 🔗 🡕 ⇗ */
+	color: #006400;
+	font-weight: bold;
+}	
+
