--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -14,7 +14,15 @@ div.loweralphalist ol {
 
 a[rel='noopener noreferrer']::after {
 	content: " 🡕"; /* ⇗ ⋙ ⌲ ⍈  ↪ 🔗 🡕 ⇗ */
-	color: #006400;
+	color: $accentColor;
 	font-weight: bold;
 }	
 
+
+div.custom-block.tip {
+	border-color: $badgeTipColor; 
+}
+
+blockquote p {
+	color: $textColor;
+}
